--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -148,6 +148,23 @@
 <ul>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Information Visualization Conference</span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">Eurographics/IEEE Symposium on Visualization</span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">2EG Eurovis&nbsp;</span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE PacificVis 2024</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://pacificvis.github.io/pvis2024/" id="OWAe3e70042-88bf-5e95-8f1a-00295f75e9d7" rel="noopener noreferrer" target="_blank">https://pacificvis.github.io/pvis2024/</a></span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline (November 2, 2023)</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IVAPP 2024</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://ivapp.scitevents.org/" id="OWA66bb9994-6c4e-e414-283b-43f63a8bfed4" rel="noopener noreferrer" target="_blank">https://ivapp.scitevents.org/</a>&nbsp;</span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline (October 9, 2023)</span></p>
+
+<ul>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">Joint workshop on Multimodal Interaction and Related Machine Learning Algorithms (now ICMI-MLMI)</span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">SPIE International Conference on Visual Communications and Image Processing</span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">The IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</span></li>
@@ -174,7 +191,7 @@
 <hr />
 <p>&nbsp;</p>
 
-<p><span style="font-size:16px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="color:#c0392b"><strong>PERCEPTION, AR/VR/MR&nbsp;</strong></span></span></span></p>
+<p><span style="font-size:16px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="color:#c0392b"><strong>PERCEPTION, AR/VR/MR, HCI&nbsp;</strong></span></span></span></p>
 
 <p><span style="font-size:14px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="color:#c0392b"><strong>Conferences</strong></span></span></span></p>
 
@@ -193,6 +210,56 @@
 <p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://ieeevr.org/2024/contribute/papers/">https://ieeevr.org/2024/contribute/papers/</a></span></p>
 
 <p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Oct 4, 2023 (Full paper with abstract due on Sep 27)</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">ACM ETRA 2023</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://etra.acm.org/2024/index.html" rel="noopener noreferrer" target="_blank">https://etra.acm.org/2024/index.html</a>&nbsp;</span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline (November 10)</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">ACM SAP</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://sap.acm.org/" rel="noopener noreferrer" target="_blank">https://sap.acm.org/</a>&nbsp;</span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline (April 2024)</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE ISMAR 2024</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline June 2024</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE SUI 2024&nbsp;</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline June 2024</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">ACM CHI 2023</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline (September 2023)</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Nordic forum for Human-Computer Interaction NordicCHI 2024</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline (October 4 2023)</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">HUCAPP 2024</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">&nbsp;<a href="https://hucapp.scitevents.org/" id="OWA03932a8f-941c-0a2e-a116-eee5d2bd5f60" rel="noopener noreferrer" target="_blank" title="https://hucapp.scitevents.org/">https://hucapp.scitevents.org/</a>&nbsp;</span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">Deadline (October 9 2023)</span></p>
+
+<p style="margin-left:40px">&nbsp;</p>
 
 <p><strong><span style="color:#d35400"><span style="font-size:14px"><span style="font-family:Arial,Helvetica,sans-serif">Journals</span></span></span></strong></p>
 
