--- a/index.html
+++ b/index.html
@@ -6268,16 +6268,11 @@ function recaptchaOnload() {
 							<img src="./index_files/C67CC597BE29EDA1.png" alt="">
 						</a>
 				</div>
-				<div class="image-wrapper">
-					
-						<a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank">
-							<img src="./index_files/online-publishing-tools.png" alt="">
-						</a>
-				</div>
 			</div><div id="el-864220" class="element text-element  "> 
 		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div>
 		</div><div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">Conferences and journals for publications in computer graphics, visualization, perception/HCI, AI <a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><u> Check here</u></a></span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">2023: One paper accepted at iCord'23 and Frontiers in Computer Science each</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">2022: One paper accepted at EGPGV and DESIGN conferences each</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">February 2022: I am a Guest Editor for our special issue in the &nbsp;<a href="https://www.mdpi.com/journal/education/special_issues/Education_VR" target="_blank"><u>Education Sciences Journal(MDPI)</u></a> on "Higher Education and Its Improvement through Virtual Reality"</span></li>	
@@ -6325,7 +6320,7 @@ function recaptchaOnload() {
 		</div>
 	</div>	
 </div>
-<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
