--- a/index.html
+++ b/index.html
@@ -6273,7 +6273,7 @@ function recaptchaOnload() {
 		</div><div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;"><strong>Conferences and journals for publications in computer graphics, visualization, perception/HCI, AI: <a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><u> <font color="#9900FF"> [Check here] </strong></font></u></a></span></li>
-	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">2023: One paper accepted at iCord'23 and Frontiers in Computer Science each</span></li>
+	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">2023: One paper accepted at iCord'23, Frontiers in Computer Science, IPTA '23, SAIS '23, each</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">2022: One paper accepted at EGPGV and DESIGN conferences each</span></li>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">February 2022: I am a Guest Editor for our special issue in the &nbsp;<a href="https://www.mdpi.com/journal/education/special_issues/Education_VR" target="_blank"><u>Education Sciences Journal(MDPI)</u></a> on "Higher Education and Its Improvement through Virtual Reality"</span></li>	
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;">December 2021: Our Linnaeus-Palme Planning Grant Application with IIT Mandi is accepted!</span></li>
