--- a/index.html
+++ b/index.html
@@ -6311,6 +6311,12 @@ function recaptchaOnload() {
 <p><span class="fgColor fg-C3"><em><strong>Address:</strong></em></span> Room J3624, BTH Karlskrona 371 41</p>
 </div>
 		</div><div id="el-124097" class="element text-element  "> 
+		
+<!--<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;"><strong>Conferences and journals for publications in computer graphics, visualization, perception/HCI, AI: <a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><u> <font color="#9900FF"> [Check here] </strong></font></u></a></span></li>		-->
+		
+<div class="text-content"><h4 class="title4"><span class="fgColor fg-D3"><strong>Conferences and journals for publications in computer graphics, visualization, perception/HCI, AI: <a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><u> <font color="#9900FF"> [Check here] </strong></font></u></a></span></h3>
+</div>		
+		
 		<div class="text-content"><h3 class="title3"><span class="fgColor fg-D3">News:</span></h3>
 </div>
 		</div> 
