--- a/index.html
+++ b/index.html
@@ -6258,7 +6258,7 @@ function recaptchaOnload() {
 	</div><div id="el-124704" class="element image-element  "> 
 				<div class="image-wrapper">
 					
-						<img src="./index_files/A1F5AF7FB3635568.jpg" alt="">
+						<img src="./index_files/IMG_2184.jpg" alt="">
 					
 				</div>
 			</div><div id="el-864218" class="element image-element  "> 
