--- a/index.html
+++ b/index.html
@@ -6258,7 +6258,7 @@ function recaptchaOnload() {
 	</div><div id="el-124704" class="element image-element  "> 
 				<div class="image-wrapper">
 					
-						<img src="./index_files/IMG_2184.jpeg" alt="">
+						<img src="./index_files/IMG_2184.jpg" alt="">
 					
 				</div>
 			</div><div id="el-864218" class="element image-element  "> 
@@ -6314,7 +6314,7 @@ function recaptchaOnload() {
 		
 <!--<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;"><strong>Conferences and journals for publications in computer graphics, visualization, perception/HCI, AI: <a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><u> <font color="#9900FF"> [Check here] </strong></font></u></a></span></li>		-->
 		
-
+<div class="text-content"><h4 class="title4"><span class="fgColor fg-D3"><strong>Conferences and journals for publications in computer graphics, visualization, perception/HCI, AI: <a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><u> <font color="#9900FF"> [Check here] </strong></font></u></a></span></h4>
 </div>		
 		
 		<div class="text-content"><h3 class="title3"><span class="fgColor fg-D3">News:</span></h3>
