--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -146,9 +146,30 @@
 <p><span style="font-family:Arial,Helvetica,sans-serif"><span style="color:#2980b9"><strong>Conferences</strong></span></span></p>
 
 <ul>
-	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Information Visualization Conference</span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif">Eurographics/IEEE Symposium on Visualization</span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif">2EG Eurovis&nbsp;</span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Vis 2024</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-size:14px"><a href="https://ieeevis.org/year/2023/welcome" rel="noopener noreferrer" target="_blank">https://ieeevis.org/year/2023/welcome</a></span></p>
+
+<p style="margin-left:40px">&nbsp;</p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">March, 2024 (Full papers with abstract submission)</span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">April, 2024 (Short papers with abstract submission)</span></p>
+
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Euro Vis 2024</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-size:14px"><a href="https://www.eurovis.org/eurovis" rel="noopener noreferrer" target="_blank">https://www.eurovis.org/eurovis</a></span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">October, 2023 (STARs with abstract submission)</span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">November, 2023 (Full papers with abstract submission)</span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif">March, 2024 (Short papers with abstract submission)</span></p>
+
+<ul>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE PacificVis 2024</span></li>
 </ul>
 
@@ -171,16 +192,51 @@
 	<li><span style="font-family:Arial,Helvetica,sans-serif">International Conference on Advanced Visual Interfaces</span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">International Conference on Learning Analytics &amp; Knowledge (LAK) - ACM</span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">International Conference on Computer Graphics, Visualization and Computer Vision (ACM)</span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif">Joint Conference on Computer Vision, Imaging and Computer Graphics Theory and Applications (GRAPP and VISAPP combined from 2008)</span><br />
-	&nbsp;</li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif">Joint Conference on Computer Vision, Imaging and Computer Graphics Theory and Applications (GRAPP and VISAPP combined from 2008)</span></li>
+	<li><span style="font-size:14px">International Symposium on Visual Information Communication and Interaction (VINCI) -&nbsp;<a href="https://vinci-symp.org/" rel="noopener noreferrer" target="_blank">https://vinci-symp.org</a></span></li>
+	<li><span style="font-size:14px">Joint workshop on Multimodal Interaction and Related Machine Learning Algorithms (now ICMI-MLMI)</span></li>
+	<li><span style="font-size:14px">SPIE International Conference on Visual Communications and Image Processing- the VDA track</span></li>
 </ul>
 
-<p><span style="color:#2980b9"><strong><span style="font-family:Arial,Helvetica,sans-serif">Journals</span></strong></span><br />
-&nbsp;</p>
+<p><span style="color:#2980b9"><strong><span style="font-family:Arial,Helvetica,sans-serif">Journals</span></strong></span></p>
 
 <ul>
-	<li>IEEE Transactions on Visualization and Computer Graphics</li>
+	<li><span style="font-size:14px">IEEE Transactions on Visualization and Computer Graphics</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-size:14px"><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=2945" rel="noopener noreferrer" target="_blank">https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=2945</a></span></p>
+
+<ul>
+	<li>Computer Graphics Forum</li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-size:14px"><a href="https://onlinelibrary.wiley.com/journal/14678659" rel="noopener noreferrer" target="_blank">https://onlinelibrary.wiley.com/journal/14678659</a></span></p>
+
+<ul>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">The Visual Computer </span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://www.springer.com/journal/371">https://www.springer.com/journal/371</a></span></p>
+
+<ul>
+	<li><span style="font-size:14px">SAGE Information Visualisation </span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-size:14px">&nbsp;<a href="https://journals.sagepub.com/home/ivi" rel="noopener noreferrer" target="_blank">https://journals.sagepub.com/home/ivi</a></span></p>
+
+<ul>
+	<li><span style="font-size:14px">Journal of Visualization</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-size:14px"><a href="https://www.springer.com/journal/12650" rel="noopener noreferrer" target="_blank">https://www.springer.com/journal/12650</a></span></p>
+
+<ul>
+	<li><span style="font-size:14px">IEEE Computer Graphics and Applications</span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-size:14px"><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=38" rel="noopener noreferrer" target="_blank">https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=38</a></span></p>
+
+<ul>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">IEEE Transactions on Affective Computing Journal of Visual Communication and Image Representation</span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">Elsevier Computational Visual Media</span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif">Springer Visualization in Engineering Journal of Visualization Visual Computing for Industry, Biomedicine, and Art</span></li>
@@ -262,6 +318,12 @@
 <p style="margin-left:40px">&nbsp;</p>
 
 <p><strong><span style="color:#d35400"><span style="font-size:14px"><span style="font-family:Arial,Helvetica,sans-serif">Journals</span></span></span></strong></p>
+
+<ul>
+	<li><span style="font-size:14px"><span style="font-family:Arial,Helvetica,sans-serif">Transactions on Applied Perception</span></span></li>
+</ul>
+
+<p style="margin-left:40px"><a href="https://dl.acm.org/journal/tap">https://dl.acm.org/journal/tap</a></p>
 
 <hr />
 <p><span style="font-size:14px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="color:#27ae60"><strong>ARTIFICIAL INTELLIGENCE (AI)</strong></span></span></span></p>
