--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -237,7 +237,8 @@
 <p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px"><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=38" rel="noopener noreferrer" target="_blank">https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=38</a></span></span></p>
 
 <ul>
-	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE Transactions on Affective Computing Journal of Visual Communication and Image Representation</span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE Transactions on Affective Computing </span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Journal of Visual Communication and Image Representation</span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Elsevier Computational Visual Media</span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Springer Visualization in Engineering Journal of Visualization Visual Computing for Industry, Biomedicine, and Art</span></span></li>
 </ul>
@@ -341,7 +342,8 @@
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">International Joint Conference on Artificial Intelligence Engineering Applications of Artificial Intelligence </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">European Conference on Artificial Intelligence European Conference on Computer Vision </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Database (PKDD and ECML combined from 2008) </span></span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE International Symposium on Artificial Life IEEE Workshop on Applications of Computer Vision</span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE International Symposium on Artificial Life </span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE Workshop on Applications of Computer Vision</span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE International Joint Conference on Neural Networks </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE/RSJ International Conference on Intelligent Robots and Systems </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Intelligent Data Analysis </span></span></li>
@@ -382,7 +384,8 @@
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE Intelligent Systems </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE Transactions on Knowledge and Data Engineering </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">International Journal of Computational Intelligence and Applications </span></span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">International Journal of Computer Vision Journal of Artificial Intelligence Research </span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">International Journal of Computer Vision </span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Journal of Artificial Intelligence Research </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Journal of Machine Learning Research </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Minds and Machines: journal for artificial intelligence, philosophy and cognitive sciences </span></span></li>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Neural Computation </span></span></li>
