--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -238,9 +238,11 @@
 
 <ul>
 	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">IEEE Transactions on Affective Computing </span></span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Journal of Visual Communication and Image Representation</span></span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Elsevier Computational Visual Media</span></span></li>
-	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Springer Visualization in Engineering Journal of Visualization Visual Computing for Industry, Biomedicine, and Art</span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Journal of Visual Communication and Image Representation&nbsp;Elsevier</span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Computational Visual Media Springer</span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Visualization in Engineering Springer</span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Journal of Visualization Springer</span></span></li>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Visual Computing for Industry, Biomedicine, and Art Springer</span></span></li>
 </ul>
 
 <p>&nbsp;</p>
