--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -138,6 +138,12 @@
 
 <p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://onlinelibrary.wiley.com/journal/1546427x">https://onlinelibrary.wiley.com/journal/1546427x</a></span></p>
 
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Proceedings of the ACM on Computer Graphics and Interactive Techniques</span></span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><a href="https://dl.acm.org/journal/pacmcgit">https://dl.acm.org/journal/pacmcgit</a></span></p>
+
 <hr />
 <p>&nbsp;</p>
 
