--- a/Publications.html
+++ b/Publications.html
@@ -6431,6 +6431,14 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2023</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Nursing23.png"/>
+						<b>A Review on XR in Home-based Nursing Education</b>
+						<br/>
+						Yan Hu, Prashant Goswami, Veronica Sundstedt
+						<br/><i>HEALTHINFO: The Eighth International Conference on Informatics and Assistive Technologies for Health-Care, Medical Support and Wellbeing</i>, 2023 <br/>
+						<a href="https://www.diva-portal.org/smash/get/diva2:1811630/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IPTA_2023.png"/>
 						<b>Animated lightning bolt generation using machine learning</b>
 						<br/>
