--- a/Publications.html
+++ b/Publications.html
@@ -6443,8 +6443,8 @@ function recaptchaOnload() {
 						<b>Animated lightning bolt generation using machine learning</b>
 						<br/>
 						Prashant Goswami, Henrik Johansson, Abbas Cheddad
-						<br/><i>Accepted as Full Paper at International Conference on Image Processing Theory, Tools and Applications (IPTA)</i>, 2023 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><i>Full Paper, International Conference on Image Processing Theory, Tools and Applications (IPTA), IEEE </i>, 2023 <br/>
+						<a href="https://bth.diva-portal.org/smash/get/diva2:1822610/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="https://www.youtube.com/watch?v=DIy2nHu5_PE" target="_blank">[<font color="#0547f6">Video</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
