--- a/Publications.html
+++ b/Publications.html
@@ -6462,7 +6462,7 @@ function recaptchaOnload() {
 						<br/>
 						 Santosh Jagtap, Prashant Goswami 
 						<br/><i>Book Chapter, Springer, Design in the Era of Industry 4.0, Volume 3, Proceedings of the 9th International Conference on Research Into Design (iCord'23), pp.647-658,</i> 2023 <br/>
-						<a href="https://link.springer.com/chapter/10.1007/978-981-99-0428-0_53" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://www.researchgate.net/profile/Santosh-Jagtap-3/publication/372610533_Design_of_Artificial_Intelligence-Based_Products_Barriers_and_Enablers/links/64cb18a140a524707b8e3334/Design-of-Artificial-Intelligence-Based-Products-Barriers-and-Enablers.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						
 						<br/><br/><br/><br/><br/>
 				</li>
