--- a/Teaching.html
+++ b/Teaching.html
@@ -6188,12 +6188,14 @@ function recaptchaOnload() {
 		<div class="text-content"><h4><strong>Teaching</strong></h4> 
 
 <p><u>Current :</u></p> 
-<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2023  (Examiner, Course responsible)</p> 
-<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2023&nbsp; (Head-Examiner)</p>
+<p>DV1478 : Bachelor Thesis in Computer Science (LP3/LP4) 2024  (Examiner, Course responsible) </p> 
+<p>DV1583 : Bachelor Thesis in Computer Science, IT Security (LP3/LP4) 2024  (Examiner, Course responsible)</p> 
+<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2024&nbsp; (Head-Examiner)</p>
 
 <p>&nbsp;</p> 
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous (Examiner, Course responsible and Main instructor):</u></p>
+<p>DV2591 : Game Engine Architecture (LP2) 2023&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.9)</p>
 <p>DV1569 : Artificial Intelligence for Games (LP2) 2022&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: -)</p>
 <p>DV2591 : Game Engine Architecture (LP2) 2022&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: -)</p>
 <p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2021&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.1/4.0)</p>
@@ -6216,6 +6218,7 @@ function recaptchaOnload() {
 <p>DV2549 : Game Engine Architecture (LP1) 2015 &nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.4/4.0)</p> 
 <p>DV1474 : Visualization (LP3) 2015&nbsp;</p> 
 <p>&nbsp;</p> 
+<p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2023&nbsp; (Head-Examiner)</p>
 <p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2022&nbsp; (Head-Examiner)</p>
 <p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2021&nbsp; (Head-Examiner)</p>
 <p>TE2502 : Civilingenjör (Dual-degree) in Game Programming (LP3/LP4) 2020&nbsp; (Head-Examiner)</p>
