--- a/Teaching.html
+++ b/Teaching.html
@@ -6196,6 +6196,7 @@ function recaptchaOnload() {
 <p>&nbsp;</p> 
 <p><u>&nbsp;Previous (Examiner, Course responsible and Main instructor):</u></p>
 <p>DV2591 : Game Engine Architecture (LP2) 2023&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.9)</p>
+<p>DV1521 : Research Orientation in Game and Software Technology (LP4) 2023&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: 3.3)</p>
 <p>DV1569 : Artificial Intelligence for Games (LP2) 2022&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: -)</p>
 <p>DV2591 : Game Engine Architecture (LP2) 2022&nbsp; &nbsp; &nbsp; &nbsp;(Course evaluation: -)</p>
 <p>DV1472/DV1569 : Artificial Intelligence for Games (LP2) 2021&nbsp; &nbsp; &nbsp; &nbsp; (Course evaluation: 3.1/4.0)</p>
