--- a/index.html
+++ b/index.html
@@ -6269,7 +6269,8 @@ function recaptchaOnload() {
 						</a>
 				</div>
 			</div><div id="el-864220" class="element text-element  "> 
-		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div>
+		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ&quot;,&quot;inNewWin&quot;:true}" href="https://scholar.google.com/citations?hl=en&amp;user=TGmVSaQAAAAJ" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Google scholar</span></font></span></a></h3></div>  <br><br><br><br><br><br><br>
+		<div class="text-content"><h3 style="line-height:1;"><a class="link" data-linkto="{&quot;type&quot;:&quot;Url&quot;,&quot;src&quot;:&quot;https://prashantgos.github.io/SubmissionVenues.html&quot;,&quot;inNewWin&quot;:true}" href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><span class="fgColor" style="color:#0048e3;"><font><span style="font-size: 14px;">Submission Venues</span></font></span></a></h3></div>
 		</div><div id="el-124102" class="element text-element  "> 
 		<div class="text-content"><ul>
 	<li><span class="fontSize blinking" style="font-size: 12px; line-height: 1;"><strong>Conferences and journals for publications in computer graphics, visualization, perception/HCI, AI: <a href="https://prashantgos.github.io/SubmissionVenues.html" target="_blank"><u> <font color="#9900FF"> [Check here] </strong></font></u></a></span></li>
