--- a/Publications.html
+++ b/Publications.html
@@ -6428,6 +6428,18 @@ function recaptchaOnload() {
 		<div class="text-content"><h3><strong>Publications</strong></h3>  <br>
 		
 		
+<h2 style="padding-left:25px;"><strong>2024</strong></h2> 
+<ul style="list-style: none; line-height: 120%">
+<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAR24.png"/>
+						<b>Snow and Ice Animation Methods in Computer Graphics</b>
+						<br/>
+						Prashant Goswami
+						<br/><i>To Appear, State-of-the-art Report, Eurographics</i>, 2024 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="" target="_blank">[<font color="#0547f6">Presentation</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+</ul>		
 		
 <h2 style="padding-left:25px;"><strong>2023</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
