--- a/Publications.html
+++ b/Publications.html
@@ -6434,7 +6434,7 @@ function recaptchaOnload() {
 						<b>Snow and Ice Animation Methods in Computer Graphics</b>
 						<br/>
 						Prashant Goswami
-						<br/><i>To Appear, State-of-the-art Report, Eurographics</i>, 2024 <br/>
+						<br/><i>To Appear, Computer Graphics Forum, State-of-the-art Report, Eurographics</i>, 2024 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<a href="" target="_blank">[<font color="#0547f6">Presentation</font>]</a>
 						<br/><br/><br/><br/><br/>
