--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6200,6 +6200,7 @@ function recaptchaOnload() {
 
 <ul>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2024 (Rome, Italy)</li>
+	<li>International Conference on Web Information Systems and Technologies (WEBIST) 2023 (Lisbon, Portugal)</li> 	
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2023 (Bridgetown, Barbados)</li>
 	<li>Smart Tools and Applications in Graphics(STAG) 2023 (Matera, Italy)</li>
 	<li>Applications and Systems of Visual Paradigms (VISUAL, IARIA) 2023 (Barcelona, Spain)</li>
@@ -6214,6 +6215,11 @@ function recaptchaOnload() {
 	<li>Applications and Systems of Visual Paradigms (VISUAL, IARIA) 2018 (Venice, Italy)</li>
 	<li>Workshop on Virtual Reality Interaction and Physical Simulation (VRIPHYS) 2018 (Delft, Netherlands)</li>
 	<li>Applications and Systems of Visual Paradigms (VISUAL, IARIA) 2017 (Nice, France)</li>
+</ul>
+
+<p>Other conference responsibilities:</p>
+<ul>
+<li>Serving as one of the Workshop Chairs for International Conference on Fog and Mobile Edge Computing (FMEC 2024)</li>
 </ul>
 
 <p>&nbsp;</p>
