--- a/SubmissionVenues.html
+++ b/SubmissionVenues.html
@@ -324,6 +324,14 @@
 
 <p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Deadline (October 9 2023)</span></span></p>
 
+<ul>
+	<li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">International Conference on eXtended Reality (XR SALENTO)</span></span></li>
+</ul>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">&nbsp;<a href="https://www.xrsalento.it/" id="OWA03932a8f-941c-0a2e-a116-eee5d2bd5f60" rel="noopener noreferrer" target="_blank" title="https://hucapp.scitevents.org/">https://hucapp.scitevents.org/</a>&nbsp;</span></span></p>
+
+<p style="margin-left:40px"><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px">Deadline (April 15 2024)</span></span></p>
+
 <p style="margin-left:40px">&nbsp;</p>
 
 <p><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:14px"><strong><span style="color:#d35400">Journals</span></strong></span></span></p>
