--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6244,6 +6244,7 @@ function recaptchaOnload() {
 	<li>Computers and Graphics Journal</li>
 	<li>Computer Graphics International</li>
 	<li>IEEE Transactions on Parallel and Distributed Systems</li>
+	<li>IEEE Transactions on Systems, Man, and Cybernetics: Systems</li>
 	<li>Pacific Graphics</li>
 	<li>Journal of Parallel and Distributed Computing</li>
 	<li>Visual Computer Journal</li>
