--- a/Publications.html
+++ b/Publications.html
@@ -6430,7 +6430,7 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2024</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
-<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAR24.png"/>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAR24.png"/>
 						<b>Snow and Ice Animation Methods in Computer Graphics</b>
 						<br/>
 						Prashant Goswami
@@ -6439,6 +6439,22 @@ function recaptchaOnload() {
 						<a href="" target="_blank">[<font color="#0547f6">Presentation</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Education2024.png"/>
+						<b>A Research Methodology Course in a Game Development Curriculum</b>
+						<br/>
+						Yan Hu, Veronica Sundstedt, Prashant Goswami
+						<br/><i>To Appear, Education Papers, Eurographics</i>, 2024 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IEEE_Gem2024.png"/>
+						<b>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</b>
+						<br/>
+						Klara Andersson, Erik Land&eacute;n, Prashant Goswami
+						<br/><i>To Appear, IEEE Games, Multimedia and Entertainment</i>, 2024 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>				
 </ul>		
 		
 <h2 style="padding-left:25px;"><strong>2023</strong></h2> 
@@ -6882,6 +6898,7 @@ function recaptchaOnload() {
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
