--- a/Publications.html
+++ b/Publications.html
@@ -6451,7 +6451,7 @@ function recaptchaOnload() {
 						<b>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</b>
 						<br/>
 						Klara Andersson, Erik Land&eacute;n, Prashant Goswami
-						<br/><i>To Appear, IEEE Games, Multimedia and Entertainment</i>, 2024 <br/>
+						<br/><i>To Appear, IEEE CTSoc Gaming, Entertainment and Media (GEM)</i>, 2024 <br/>
 						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
