--- a/Publications.html
+++ b/Publications.html
@@ -6434,9 +6434,8 @@ function recaptchaOnload() {
 						<b>Snow and Ice Animation Methods in Computer Graphics</b>
 						<br/>
 						Prashant Goswami
-						<br/><i>To Appear, Computer Graphics Forum, State-of-the-art Report, Eurographics</i>, 2024 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
-						<a href="" target="_blank">[<font color="#0547f6">Presentation</font>]</a>
+						<br/><i>Computer Graphics Forum, State-of-the-art Report, Eurographics</i>, 2024 <br/>
+						<a href="https://www.diva-portal.org/smash/get/diva2:1853187/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Education2024.png"/>
@@ -6444,7 +6443,7 @@ function recaptchaOnload() {
 						<br/>
 						Yan Hu, Veronica Sundstedt, Prashant Goswami
 						<br/><i>To Appear, Education Papers, Eurographics</i>, 2024 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://diglib.eg.org/bitstream/handle/10.2312/eged20241006/07_eged20241006.pdf?sequence=1&isAllowed=y" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IEEE_Gem_2024.png"/>
