--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6199,8 +6199,11 @@ function recaptchaOnload() {
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
+	<li>Computer Graphics Theory and Applications (GRAPP) 2025 (Porto, Portugal)</li>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2024 (Rome, Italy)</li>
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2024 (Torino, Italy)</li>
+	<li>Smart Tools and Applications in Graphics(STAG) 2024 (Verona, Italy)</li>
+	<li>Applications and Systems of Visual Paradigms (VISUAL, IARIA) 2024 (Athens, Greece)</li>
 	<li>International Conference on Web Information Systems and Technologies (WEBIST) 2024 (Lisbon, Portugal)</li> 	
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2023 (Bridgetown, Barbados)</li>
 	<li>Smart Tools and Applications in Graphics(STAG) 2023 (Matera, Italy)</li>
@@ -6261,6 +6264,8 @@ function recaptchaOnload() {
 	<li>ACM SIGSPATIAL International Conference</li>
 	<li>Eurographics Parallel Graphics and Visualization</li>
 	<li>ACM SIGGRAPH High-Performance Graphics</li>
+	<li>Signal, Image and Video Processing Journal</li>
+	<li> Cogent Education Journal</li>
 	<li>Engineering Applications of Artificial Intelligence</li>
 	<li>Journal of Zhejiang University Science C Journal (Computers &amp; Electronics)</li>
 </ul>
@@ -6285,6 +6290,7 @@ function recaptchaOnload() {
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br>
 	<footer>
 	    <div id="footer-body" class="section">
 	    	<div class="container">
