--- a/Supervision.html
+++ b/Supervision.html
@@ -6203,6 +6203,8 @@ function recaptchaOnload() {
 <h3><span class="fontSize" style="font-size: 16px; line-height: inherit; letter-spacing: inherit;">Master thesis:</span></h3> 
 <p><u>Current (2024):</u></p> 
 <ul> 
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Elliot Lundin &amp; Felix Matthiasson </font></font></li>
+ <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Herman Larsson @ Epiroc </font></font></li> 
  <li><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Lakshmi Sowmya Mamillapalli @ Volvo (with Omsri Kumar Aeddula) </font></font></li>
 
 
