--- a/Publications.html
+++ b/Publications.html
@@ -6451,7 +6451,7 @@ function recaptchaOnload() {
 						<br/>
 						Klara Andersson, Erik Land&eacute;n, Prashant Goswami
 						<br/><i>To Appear, IEEE CTSoc Gaming, Entertainment and Media (GEM)</i>, 2024 <br/>
-						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<a href="https://bth.diva-portal.org/smash/get/diva2:1867885/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
 </ul>		
