--- a/PeerReviewing.html
+++ b/PeerReviewing.html
@@ -6199,8 +6199,9 @@ function recaptchaOnload() {
 <p>I am serving/have served&nbsp;in&nbsp;the international Technical Program Committee for the following conferences:</p>
 
 <ul>
-	<li>International Conference on 3D Web Technology (Web3D): 2024 (Guimarães, Portugal) </li> 
 	<li>Computer Graphics Theory and Applications (GRAPP) 2025 (Porto, Portugal)</li>
+	<li>International Conference on 3D Web Technology (Web3D): 2024 (Guimarães, Portugal) </li> 
+	<li>International Conference on Fog and Mobile Edge Computing (FMEC 2024)</li>
 	<li>Computer Graphics Theory and Applications (GRAPP) 2024 (Rome, Italy)</li>
 	<li>IEEE CTSoc Gaming, Entertainment and Media (IEEE GEM) 2024 (Torino, Italy)</li>
 	<li>Smart Tools and Applications in Graphics(STAG) 2024 (Verona, Italy)</li>
