--- a/Publications.html
+++ b/Publications.html
@@ -6430,6 +6430,13 @@ function recaptchaOnload() {
 		
 <h2 style="padding-left:25px;"><strong>2024</strong></h2> 
 <ul style="list-style: none; line-height: 120%">
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/HPG24.png"/>
+						<b>Parallel spatiotemporally adaptive DEM-based snow simulation</b>
+						<br/>Simon Andreasson*, Linus Östergaard*, Prashant Goswami (* equal contribution)
+						<br/><i>To Appear, Proceedings of the ACM on Computer Graphics and Interactive Techniques Journal (High Performance Graphics) </i>, 2024 <br/>
+						<a href="" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/STAR24.png"/>
 						<b>Snow and Ice Animation Methods in Computer Graphics</b>
 						<br/>
@@ -6438,20 +6445,20 @@ function recaptchaOnload() {
 						<a href="https://www.diva-portal.org/smash/get/diva2:1853187/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>
+				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IEEE_Gem_2024.png"/>
+						<b>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</b>
+						<br/>
+						Klara Andersson, Erik Land&eacute;n, Prashant Goswami
+						<br/><i>IEEE CTSoc Gaming, Entertainment and Media (GEM)</i>, 2024 <br/>
+						<a href="https://bth.diva-portal.org/smash/get/diva2:1867885/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
+						<br/><br/><br/><br/><br/>
+				</li>		
 				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/Education2024.png"/>
 						<b>A Research Methodology Course in a Game Development Curriculum</b>
 						<br/>
 						Yan Hu, Veronica Sundstedt, Prashant Goswami
 						<br/><i>To Appear, Education Papers, Eurographics</i>, 2024 <br/>
 						<a href="https://diglib.eg.org/bitstream/handle/10.2312/eged20241006/07_eged20241006.pdf?sequence=1&isAllowed=y" target="_blank">[<font color="#0547f6">PDF</font>]</a>
-						<br/><br/><br/><br/><br/>
-				</li>
-				<li> <IMG BORDER="0" align="left"width="128" height="75" style="margin-right:20px" SRC="Publications_files/IEEE_Gem_2024.png"/>
-						<b>Exploring the Effects of Foveated Rendering on Virtual Reality Game Graphics</b>
-						<br/>
-						Klara Andersson, Erik Land&eacute;n, Prashant Goswami
-						<br/><i>To Appear, IEEE CTSoc Gaming, Entertainment and Media (GEM)</i>, 2024 <br/>
-						<a href="https://bth.diva-portal.org/smash/get/diva2:1867885/FULLTEXT01.pdf" target="_blank">[<font color="#0547f6">PDF</font>]</a>
 						<br/><br/><br/><br/><br/>
 				</li>				
 </ul>		
